# messaging-platform

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pom.xml  prometheus.yml
api-gateway/: Dockerfile  pom.xml
api-gateway/src/main/java/com/messaging/apigateway/: ApiGatewayApplication.java
api-gateway/src/main/resources/: application.yml
api-gateway/src/main/resources/db/migration/: V1__create_initial_schema.sql
api-gateway/src/test/java/com/messaging/apigateway/: ApiGatewayApplicationTests.java
common/: pom.xml
common/src/main/java/com/messaging/common/: CommonApplication.java
common/src/test/java/com/messaging/common/: CommonApplicationTests.java
cpp-processor/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md
cpp-processor/src/: main.cpp
cpp-processor/src/batch/: MessageBatcher.cpp  MessageBatcher.hpp
cpp-processor/src/grpc/: ProcessorServiceImpl.cpp  ProcessorServiceImpl.hpp
cpp-processor/src/kafka/: KafkaConsumer.cpp  KafkaConsumer.hpp
cpp-processor/src/model/: MessageEvent.hpp
delivery-service/: Dockerfile  pom.xml
delivery-service/src/main/java/com/messaging/deliveryservice/: DeliveryServiceApplication.java
delivery-service/src/main/resources/: application.yml
docs/: architecture-decisions.md  system-architecture.md
frontend/android/: gradle.properties  settings.gradle.kts
frontend/android/app/: .gitignore  build.gradle.kts  proguard-rules.pro
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/gradle/: libs.versions.toml
frontend/android/gradle/wrapper/: gradle-wrapper.properties
frontend/desktop/: .gitignore  package-lock.json  package.json  tsconfig.electron.json
frontend/desktop/src/: declarations.d.ts  main.ts  preload.ts
frontend/web/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/web/src/: App.tsx  index.css
frontend/web/src/api/: auth.ts  channels.ts  client.ts  messages.ts
frontend/web/src/components/: ChannelHeader.module.css  ChannelHeader.tsx  MessageInput.module.css  MessageInput.tsx  MessageList.module.css  MessageList.tsx  Sidebar.module.css  Sidebar.tsx
frontend/web/src/hooks/: useWebSocket.ts
frontend/web/src/pages/: ChatPage.module.css  ChatPage.tsx  LoginPage.module.css  LoginPage.tsx
frontend/web/src/store/: authStore.ts  channelStore.ts  messageStore.ts
frontend/web/src/types/: index.ts
grafana/provisioning/dashboards/: dashboard.yml  messaging-platform.json
grafana/provisioning/datasources/: prometheus.yml
grpc-stubs/: pom.xml
grpc-stubs/src/main/proto/: message_processor.proto
k8s/configmaps/: configmap.yml
k8s/deployments/: deployments.yml
k8s/hpa/: hpa.yml
k8s/ingress/: ingress.yml
k8s/rabbitmq/: rabbitmq.yml
k8s/secrets/: secrets.yml
messaging-service/: Dockerfile  pom.xml
messaging-service/src/main/resources/: application.properties  application.yml  logback-spring.xml
messaging-service/src/test/resources/: application.yml
persistence-service/: Dockerfile  pom.xml
persistence-service/src/main/resources/: application.yml
(+133 files in other folders)
